--- a/portailRH/pom.xml
+++ b/portailRH/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>smartup.microservices</groupId>
 	<artifactId>portailRH</artifactId>
 	<version>1.0</version>
+	<packaging>jar</packaging>
 	<name>portailRH</name>
 	<description>Demo project for Spring Boot microservices architecture</description>
 	<properties>
