--- a/portailRH/Jenkinsfile
+++ b/portailRH/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
 		stage ('Checkout GIT'){
 			steps{
 				echo 'Pulling...';
-					git branch: 'main',
+					git branch: 'master',
 					url : 'https://github.com/laabidi/Smart-RH.git';
 			}
 		}
